--- a/Queue.ipynb
+++ b/Queue.ipynb
@@ -243,7 +243,7 @@
     "            print('cannot pop queue is empty')\n",
     "        else:\n",
     "            self.queue.pop(0)\n",
-    "            print('item poped successfully')\n",
+    "            print('deleted successfully!')\n",
     "            \n",
     "    def display(self):\n",
     "        if not self.queue:\n",
@@ -251,12 +251,222 @@
     "        else:\n",
     "            for i in self.queue:\n",
     "                print(i, ' --- ',end=' ')\n",
+    "            print()\n",
     "    \n",
     "print('1. insert into queue')\n",
     "print('2. delete from queue')\n",
     "print('3. display queue')\n",
     "print('any key to exit')\n",
     "obj = Queue()\n",
+    "while True:\n",
+    "    print('Select option: ')\n",
+    "    n = input()\n",
+    "    if n == '1':\n",
+    "        print('enter the value to be inserted in queue:')\n",
+    "        x = int(input())\n",
+    "        obj.insert(x)\n",
+    "    elif n == '2':\n",
+    "        obj.delete()\n",
+    "    elif n == '3':\n",
+    "        obj.display()\n",
+    "    else:\n",
+    "        print('you have come out successfully')\n",
+    "        break"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "e5d860d9-959a-43ff-8f81-7b88bca0f3df",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1. insert into queue\n",
+      "2. delete from queue\n",
+      "3. display queue\n",
+      "any key to exit\n",
+      "Select option: \n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      " 1\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "enter the value to be inserted in queue:\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      " 2\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "value inserted successfully!\n",
+      "Select option: \n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      " 1\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "enter the value to be inserted in queue:\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      " 4\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "value inserted successfully!\n",
+      "Select option: \n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      " 1\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "enter the value to be inserted in queue:\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      " 5\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "value inserted successfully!\n",
+      "Select option: \n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      " 3\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "deque([2, 4, 5])\n",
+      "Select option: \n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      " 2\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "deleted successfully\n",
+      "Select option: \n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      " 3\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "deque([4, 5])\n",
+      "Select option: \n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      " r\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "you have come out successfully\n"
+     ]
+    }
+   ],
+   "source": [
+    "# using module\n",
+    "from queue import Queue\n",
+    "class QueueClass:\n",
+    "    def __init__(self):\n",
+    "        self.queue = Queue(maxsize=10)\n",
+    "    \n",
+    "    def insert(self, x):\n",
+    "        self.queue.put(x)\n",
+    "        print('value inserted successfully!')\n",
+    "        \n",
+    "    def delete(self):\n",
+    "        if not self.queue:\n",
+    "            print('cannot delete items, queue is empty')\n",
+    "        else:\n",
+    "            self.queue.get()\n",
+    "            print('deleted successfully')\n",
+    "        \n",
+    "    def display(self):\n",
+    "        if not self.queue:\n",
+    "            print('queue is empty')\n",
+    "        else:\n",
+    "            print(self.queue.queue)\n",
+    "    \n",
+    "print('1. insert into queue')\n",
+    "print('2. delete from queue')\n",
+    "print('3. display queue')\n",
+    "print('any key to exit')\n",
+    "obj = QueueClass()\n",
     "while True:\n",
     "    print('Select option: ')\n",
     "    n = input()\n",
