--- a/Queue.ipynb
+++ b/Queue.ipynb
@@ -5,7 +5,7 @@
    "id": "a102e18a-a450-42ce-8d5e-c7ec6c873194",
    "metadata": {},
    "source": [
-    "### Queue"
+    "# Queue"
    ]
   },
   {
@@ -467,6 +467,295 @@
     "print('3. display queue')\n",
     "print('any key to exit')\n",
     "obj = QueueClass()\n",
+    "while True:\n",
+    "    print('Select option: ')\n",
+    "    n = input()\n",
+    "    if n == '1':\n",
+    "        print('enter the value to be inserted in queue:')\n",
+    "        x = int(input())\n",
+    "        obj.insert(x)\n",
+    "    elif n == '2':\n",
+    "        obj.delete()\n",
+    "    elif n == '3':\n",
+    "        obj.display()\n",
+    "    else:\n",
+    "        print('you have come out successfully')\n",
+    "        break"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ccf84bb1-4bd4-408e-adbf-f6a252fb03ee",
+   "metadata": {},
+   "source": [
+    "## Priority Queue"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "202e06bb-195a-489f-957e-a83771e0209c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1. insert into queue\n",
+      "2. delete from queue\n",
+      "3. display queue\n",
+      "any key to exit\n",
+      "Select option: \n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      " 1\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "enter the value to be inserted in queue:\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      " 2\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "value added successfully\n",
+      "Select option: \n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      " 1\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "enter the value to be inserted in queue:\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      " 4\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "value added successfully\n",
+      "Select option: \n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      " 1\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "enter the value to be inserted in queue:\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      " 6\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "value added successfully\n",
+      "Select option: \n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      " 3\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2, 4, 6]\n",
+      "Select option: \n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      " 2\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Select option: \n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      " 3\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[4, 6]\n",
+      "Select option: \n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      " 1\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "enter the value to be inserted in queue:\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      " 1\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "value added successfully\n",
+      "Select option: \n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      " 1\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "enter the value to be inserted in queue:\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      " 8\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "value added successfully\n",
+      "Select option: \n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      " 3\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 6, 4, 8]\n",
+      "Select option: \n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      " r\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "you have come out successfully\n"
+     ]
+    }
+   ],
+   "source": [
+    "from queue import PriorityQueue\n",
+    "\n",
+    "class PriorityQ:\n",
+    "    def __init__(self):\n",
+    "        self.pqueue = PriorityQueue()\n",
+    "    \n",
+    "    def insert(self, x):\n",
+    "        self.pqueue.put(x)\n",
+    "        print('value added successfully')\n",
+    "        \n",
+    "    def delete(self):\n",
+    "        if not self.pqueue:\n",
+    "            print('queue is empty')\n",
+    "        else:\n",
+    "            self.pqueue.get()\n",
+    "            \n",
+    "    def display(self):\n",
+    "        if not self.pqueue:\n",
+    "            print('queue is empty')\n",
+    "        else:\n",
+    "            print(self.pqueue.queue)\n",
+    "            \n",
+    "            \n",
+    "print('1. insert into queue')\n",
+    "print('2. delete from queue')\n",
+    "print('3. display queue')\n",
+    "print('any key to exit')\n",
+    "obj = PriorityQ()\n",
     "while True:\n",
     "    print('Select option: ')\n",
     "    n = input()\n",
