--- a/LinkedList.ipynb
+++ b/LinkedList.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "ab4450cb-e3fd-4686-9d02-88bf8d774129",
    "metadata": {},
    "outputs": [
@@ -101,13 +101,14 @@
      "name": "stdin",
      "output_type": "stream",
      "text": [
-      " 2\n"
+      " 3\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "3 --> 4 --> \n",
       "Added at START\n",
       "a. at the beggining of linked list\n",
       "b. at the end of linked list\n",
@@ -140,6 +141,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "6 --> 3 --> 4 --> \n",
       "Added at START\n",
       "a. at the beggining of linked list\n",
       "b. at the end of linked list\n",
@@ -172,6 +174,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "6 --> 3 --> 4 --> 5 --> \n",
       "Added at END\n",
       "a. at the beggining of linked list\n",
       "b. at the end of linked list\n",
@@ -197,14 +200,77 @@
      "name": "stdin",
      "output_type": "stream",
      "text": [
-      " 1\n"
+      " 8\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "6 --> 2 --> 4 --> 5 --> \n",
+      "6 --> 3 --> 4 --> 5 --> \n",
+      "a. add after the Element\n",
+      "b. add before the Element\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      " a\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter element after which you want to add Node: \n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      " 3\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6 --> 3 --> 8 --> 4 --> 5 --> \n",
+      "added after 3 successfully!\n",
+      "a. at the beggining of linked list\n",
+      "b. at the end of linked list\n",
+      "c. in between the linked list\n",
+      "press any key to come back to main menu\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      " c\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter the value to be added: \n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      " 7\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6 --> 3 --> 8 --> 4 --> 5 --> \n",
       "a. add after the Element\n",
       "b. add before the Element\n"
      ]
@@ -234,6 +300,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "6 --> 3 --> 8 --> 7 --> 4 --> 5 --> \n",
       "added before 4 successfully!\n",
       "a. at the beggining of linked list\n",
       "b. at the end of linked list\n",
@@ -245,18 +312,136 @@
      "name": "stdin",
      "output_type": "stream",
      "text": [
-      " t\n"
+      " y\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "you have come out of secondary loop successfully\n",
       "1. Add a Node\n",
       "2. Remove Node\n",
       "3. Display LinkedList\n",
       "any key to exit\n",
       "Select operation to perform: \n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      " 2\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "keep deleting the elements until option is out of range\n",
+      "a. delete first node\n",
+      "b. delete last node\n",
+      "c. remove specific node\n",
+      "press any key to come back to main menu\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      " a\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3 --> 8 --> 7 --> 4 --> 5 --> \n",
+      "Value deleted from BEGINNING successfully!\n",
+      "a. delete first node\n",
+      "b. delete last node\n",
+      "c. remove specific node\n",
+      "press any key to come back to main menu\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      " c\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter the value to be deleted: \n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      " 7\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3 --> 8 --> 4 --> 5 --> \n",
+      "value deleted successfully\n",
+      "a. delete first node\n",
+      "b. delete last node\n",
+      "c. remove specific node\n",
+      "press any key to come back to main menu\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      " c\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter the value to be deleted: \n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      " 5\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3 --> 8 --> 4 --> \n",
+      "value deleted successfully\n",
+      "a. delete first node\n",
+      "b. delete last node\n",
+      "c. remove specific node\n",
+      "press any key to come back to main menu\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      " c\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter the value to be deleted: \n"
      ]
     },
     {
@@ -270,12 +455,64 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "6 --> 2 --> 1 --> 4 --> 5 --> \n",
+      "8 --> 4 --> \n",
+      "value deleted successfully\n",
+      "a. delete first node\n",
+      "b. delete last node\n",
+      "c. remove specific node\n",
+      "press any key to come back to main menu\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      " b\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "8 --> \n",
+      "Value deleted from END successfully!\n",
+      "a. delete first node\n",
+      "b. delete last node\n",
+      "c. remove specific node\n",
+      "press any key to come back to main menu\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      " u\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "you have come out of secondary loop successfully\n",
       "1. Add a Node\n",
       "2. Remove Node\n",
       "3. Display LinkedList\n",
       "any key to exit\n",
       "Select operation to perform: \n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      " a\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "you have come out of primary loop successfully\n"
      ]
     }
    ],
@@ -311,6 +548,7 @@
     "            print(\"press any key to come back to main menu\")\n",
     "            option = input()\n",
     "            if option != 'a' and option != 'b' and option != 'c':\n",
+    "                print('you have come out of secondary loop successfully')\n",
     "                return\n",
     "            print(\"Enter the value to be added: \")\n",
     "            value = int(input())\n",
@@ -325,6 +563,7 @@
     "            elif option == 'a':\n",
     "                new_node.next = self.head\n",
     "                self.head = new_node\n",
+    "                self.print_LL()\n",
     "                print('Added at START')\n",
     "                \n",
     "            # inserting at the end\n",
@@ -333,6 +572,7 @@
     "                while i.next is not None:\n",
     "                    i = i.next\n",
     "                i.next = new_node\n",
+    "                self.print_LL()\n",
     "                print('Added at END')\n",
     "                \n",
     "            # inserting in between\n",
@@ -351,6 +591,7 @@
     "                        i = i.next\n",
     "                    new_node.next = i.next\n",
     "                    i.next = new_node\n",
+    "                    self.print_LL()\n",
     "                    print('added after '+str(element)+' successfully!')\n",
     "                    \n",
     "                # inserting before\n",
@@ -358,10 +599,15 @@
     "                    print('Enter element before which you want to add Node: ')\n",
     "                    element = int(input())\n",
     "                    i = self.head\n",
-    "                    while i.next.data != element:\n",
-    "                        i = i.next\n",
-    "                    new_node.next = i.next\n",
-    "                    i.next = new_node\n",
+    "                    if i.data == element:\n",
+    "                        new_node.next = self.head\n",
+    "                        self.head = new_node\n",
+    "                    else:\n",
+    "                        while i.next.data != element:\n",
+    "                            i = i.next\n",
+    "                        new_node.next = i.next\n",
+    "                        i.next = new_node\n",
+    "                    self.print_LL()\n",
     "                    print('added before '+str(element)+' successfully!')\n",
     "                else:\n",
     "                    print(\"--option out of range--\")\n",
@@ -369,6 +615,60 @@
     "            else:\n",
     "                print(\"----\")\n",
     "                return\n",
+    "            \n",
+    "    # deleting element from LL\n",
+    "    def delete_node(self):\n",
+    "        while True:\n",
+    "            if self.head == None:\n",
+    "                print(\"Linked list does not exist\")\n",
+    "                return\n",
+    "            print(\"a. delete first node\")\n",
+    "            print(\"b. delete last node\")\n",
+    "            print(\"c. remove specific node\")\n",
+    "            print(\"press any key to come back to main menu\")  \n",
+    "            option = input()\n",
+    "            \n",
+    "            # deleting first element\n",
+    "            if option == 'a':\n",
+    "                self.head = self.head.next\n",
+    "                self.print_LL()\n",
+    "                print('Value deleted from BEGINNING successfully!')\n",
+    "                \n",
+    "            # deleting last element\n",
+    "            elif option == 'b':\n",
+    "                i = self.head\n",
+    "                if i.next == None:\n",
+    "                    self.head = None\n",
+    "                    print(\"LL is now empty\")\n",
+    "                    return\n",
+    "                while i.next.next != None:\n",
+    "                    i = i.next\n",
+    "                i.next = None\n",
+    "                self.print_LL()\n",
+    "                print('Value deleted from END successfully!')\n",
+    "                \n",
+    "            # deleting user defined element\n",
+    "            elif option == 'c':\n",
+    "                print(\"Enter the value to be deleted: \")\n",
+    "                value = int(input())\n",
+    "                i = self.head\n",
+    "                if value == i.data:\n",
+    "                    self.head = self.head.next\n",
+    "                else:\n",
+    "                    while i.next is not None:\n",
+    "                        if i.next.data == value:\n",
+    "                            break\n",
+    "                        i = i.next\n",
+    "                    if i.next is None:\n",
+    "                        print('No node exists as ' + str(value))\n",
+    "                    else:\n",
+    "                        i.next = i.next.next\n",
+    "                self.print_LL()\n",
+    "                print('value deleted successfully')\n",
+    "            else:\n",
+    "                print('you have come out of secondary loop successfully')\n",
+    "                return\n",
+    "    \n",
     "    \n",
     "obj = SinglyLinkedList()\n",
     "while True:\n",
@@ -382,13 +682,30 @@
     "        print('keep inserting the elements until option is out of range')\n",
     "        obj.insert_element()\n",
     "    elif n == '2':\n",
-    "        obj.delete()\n",
+    "        print('keep deleting the elements until option is out of range')\n",
+    "        obj.delete_node()\n",
     "    elif n == '3':\n",
     "        obj.print_LL()\n",
     "    else:\n",
-    "        print('you have come out successfully')\n",
+    "        print('you have come out of primary loop successfully')\n",
     "        break"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2f96f898-c3f0-46e8-873b-eb20109abf0c",
+   "metadata": {},
+   "source": [
+    "### Doubly Linked List"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6a4012ab-2854-4d78-a05e-29e84a67f7b8",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
